feat(os): Add hooks to support CentOS7
Add vagrantfile to support local testing
Add variables for grub's path and the super user id
Use ansible service module to do sshd restart
The playbook is running to the end without error.

--- a/playbook.yml
+++ b/playbook.yml
@@ -16,7 +16,8 @@
 #
 
 - hosts: all
-  accelerate: true
-  user: root
+#  accelerate: true
+  user: "{{ cis_user }}"
+  sudo: yes
   roles:
-    - cis 
+    - cis
