--- a/roles/cis/defaults/main.yml
+++ b/roles/cis/defaults/main.yml
@@ -1,12 +1,18 @@
+# Most of the time
+cis_user: root
+
 # Should we configure AIDE on the system? (CIS 1.3)
 # Options:
 #   yes: install and configure AIDE
 #   no: do not install or configure AIDE
 configure_aide: yes
 
+# The path to our grub config can be slightly different between versions
+grub_conf: /etc/grub.conf
+
 # auditd (CIS 5.2)
 # These are sensible defaults but you may change these to fit your system.
-action_mail_acct: "root"
+action_mail_acct: "cis_user"
 admin_space_left_action: "halt"
 max_log_file: 100
 max_log_file_action: "keep_logs"
