--- a/roles/cis/tasks/section_06_level1.yml
+++ b/roles/cis/tasks/section_06_level1.yml
@@ -37,8 +37,8 @@
   - name: 6.1.3 Set User/Group Owner and Permission on /etc/anacrontab (Scored)
     file: >
       path=/etc/anacrontab
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -48,8 +48,8 @@
   - name: 6.1.4 Set User/Group Owner and Permission on /etc/crontab (Scored)
     file: >
       path=/etc/crontab
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -59,8 +59,8 @@
   - name: 6.1.5 Set User/Group Owner and Permission on /etc/cron.hourly (Scored)
     file: >
       path=/etc/cron.hourly
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -70,8 +70,8 @@
   - name: 6.1.6 Set User/Group Owner and Permission on /etc/cron.daily  (Scored)
     file: >
       path=/etc/cron.daily
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -81,8 +81,8 @@
   - name: 6.1.7 Set User/Group Owner and Permission on /etc/cron.weekly  (Scored)
     file: >
       path=/etc/cron.weekly
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -92,8 +92,8 @@
   - name: 6.1.8 Set User/Group Owner and Permission on /etc/cron.monthly (Scored)
     file: >
       path=/etc/cron.monthly
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -104,8 +104,8 @@
     file: >
       path=/etc/cron.d
       state=directory
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0700
     tags:
       - scored
@@ -125,8 +125,8 @@
     file: >
       path=/etc/at.allow
       state=touch
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -146,8 +146,8 @@
     file: >
       path=/etc/cron.allow
       state=touch
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     tags:
       - scored
@@ -178,8 +178,8 @@
   - name: 6.2.3 Set Permissions on /etc/ssh/sshd_config (Scored)
     file: >
       path=/etc/ssh/sshd_config
-      owner=root
-      group=root
+      owner="{{ cis_user }}"
+      group="{{ cis_user }}"
       mode=0600
     notify: Reload sshd
     tags:
@@ -311,7 +311,7 @@
 
   - name: 6.2.13 Limit Access via SSH (Scored)
     lineinfile: >
-      dest=/etc/ssh/sshd_config 
+      dest=/etc/ssh/sshd_config
       regexp="^AllowUsers "
       line="AllowUsers {{ ssh_allow_users }}"
     when: ssh_allow_users is defined
